--- a/package.json
+++ b/package.json
@@ -4,23 +4,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@heroui/react": "^2.6.14",
+    "@tailwindcss/vite": "^4.0.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vitejs/plugin-react-swc": "^3.7.2",
     "bootstrap": "^5.3.3",
+    "framer-motion": "^12.0.1",
     "react": "^18.3.1",
     "react-bootstrap-typeahead": "^6.3.2",
     "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
+    "tailwindcss": "^4.0.0",
+    "vite": "^6.0.11",
+    "vite-plugin-svgr": "^4.3.0",
+    "vite-tsconfig-paths": "^5.1.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "build": "tsc && vite build",
+    "serve": "vite preview"
   },
   "eslintConfig": {
     "extends": [
